# kubrick

./: README.md  kubrick.cabal  stack.yaml
app/: Main.hs
src/: AppState.hs  AppView.hs  Draw.hs  Events.hs  History.hs  Http.hs  Lib.hs
src/Data/Tree/: Zipper.hs
src/Objects/: ApiResourceList.hs  DeploymentList.hs  ObjectMeta.hs  Pod.hs  PodList.hs  PodStatus.hs  Resource.hs
