name:                kubrick
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kubrick#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       AppView
                       History
                       AppState
                       Draw
                       Http
                       Events
                       Objects.Resource
                       Objects.ApiResourceList
                       Objects.DeploymentList
                       Objects.ObjectMeta
                       Objects.PodList
                       Objects.PodStatus
                       Objects.Pod
                       Data.Tree.Zipper
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , brick
                     , lens
                     , aeson
                     , lens-aeson
                     , bytestring
                     , text
                     , vty
                     , brick
                     , vector
                     , containers
  default-language:    Haskell2010

executable kubrick-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kubrick
  default-language:    Haskell2010

test-suite kubrick-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kubrick
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kubrick
